tests/error/type_match/base_case_implicit_conversion2.bz
function test()
{
	let _: float64 = 0.0f32;
}
